--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,10 @@ h1 {
 }
 
 h2 {
-    color: #fff;
+    color:#00bfff;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
     font-size: 1em;
+    text-align: center;
     margin-bottom: 0;
     font-weight: 700;
   letter-spacing: 0.5px;
